--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,12 +47,16 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
+      - name: Prepare deployment files
+        run: |
+          mkdir _site
+          cp index.html _site/
+          cp CNAME _site/
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: |
-            index.html
-            CNAME
+          path: '_site'
 
       - name: Deploy to GitHub Pages
         id: deployment
